# xenon-xfp

./: .gitignore  Cargo.toml
protocol/: Cargo.toml
protocol/src/: api.rs  dir.rs  file.rs  lib.rs  metadata.rs  util.rs
protocol/src/api/: get_dir.rs  get_file.rs  get_metadata.rs  mounts.rs
protocol/src/metadata/: permissions.rs
server/: Cargo.toml
