[package]
name = "xfp-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde-well-known"] }
faccess = "0.2"

[target.'cfg(unix)'.dependencies]
nix = "0.24"

[target.'cfg(windows)'.dependencies]
windows-permissions = "0.2.4"
